k8s/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      enableServiceLinks: false
      containers:
      - name: auth-service
        image: twitter-auth-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
