k8s/feed-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feed-service
  template:
    metadata:
      labels:
        app: feed-service
    spec:
      enableServiceLinks: false
      containers:
      - name: feed-service
        image: twitter-feed-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: feed-service
spec:
  type: ClusterIP
  selector:
    app: feed-service
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004
