k8s/notification-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      enableServiceLinks: false
      containers:
      - name: notification-service
        image: twitter-notification-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3006
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 3006
      targetPort: 3006
