k8s/search-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-service
  template:
    metadata:
      labels:
        app: search-service
    spec:
      enableServiceLinks: false
      containers:
      - name: search-service
        image: twitter-search-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: search-service
spec:
  type: ClusterIP
  selector:
    app: search-service
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3005
