k8s/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      enableServiceLinks: false
      containers:
      - name: user-service
        image: twitter-user-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
